@@ -1,8 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.71 2005/02/17 06:08:08 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.72 2005/02/18 03:55:39 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  17 Feb 2005; John Laliberte <allanonl@bu.edu>
+  ExtraPackages.py - Added a lot of UI reaction details.  It now
+  reacts in a reasonable way that users will expect. Added support
+  for each section to have "default" packages selected when you
+  select the category.
 
   16 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added PartitioningMain which has a gtk.Notebook for Partitioning and
